# ai-over-bi

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  start.sh
agent/: .env.example  pyproject.toml
agent/src/ai_over_bi/: __init__.py  catalog.py  config.py  contracts.py  logging_config.py  main.py
agent/src/ai_over_bi/.adk/: session.db
agent/src/ai_over_bi/agents/: analyst.py  data_query.py  orchestrator.py  prompt_loader.py
agent/src/ai_over_bi/agents/prompts/: _metric_display_rules.md  analyst.md  data_query.md  orchestrator.md
agent/src/ai_over_bi/data/: seed.py  store_data.db
agent/src/ai_over_bi/tools/: a2ui.py  analyst.py  query.py
docs/: 30_a2ui-using copilot.md  31_maintaining_a2ui_catalog.md  adk-copilotkit-primer.md  architecture.md  backend-agents.md  copilotchat-anatomy.md  learn.md  protocols.md  tool-hooks-anatomy.md
docs/later/: dbrix-agentic-ai-best-practices.md  later-ai-driven-visualizations.md
frontend/: .env.local.example  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/components/: AppShell.tsx  VizPanel.tsx  VizRenderer.tsx
frontend/app/components/shell/: ChatInputRow.tsx  ChatTranscript.tsx  NavBar.tsx
frontend/app/components/viz/: AreaChart.tsx  BarChart.tsx  ComparisonCard.tsx  (+5 more)
frontend/lib/: chartColors.ts  format.ts
frontend/lib/a2ui/: catalog.ts  definitions.ts  renderers.tsx
frontend/lib/theme/: colors.ts  effects.ts  formatters.ts  index.ts  typography.ts
frontend/types/: agent-state.ts  viz.ts
